2025/2_semestre/compiladores/trabalho_2/BrunaFelipe.output
Terminals unused in grammar

    RETURN
    EQUALS
    MENOR
    MAIOR


Grammar

    0 $accept: S $end

    1 S: Prog

    2 Prog: ListaDecl ListaCmd

    3 ListaDecl: Decl ListaDecl
    4          | ε

    5 Decl: Tipo VAR PTVIRG

    6 Tipo: LONG_T
    7     | LONG_LONG_T

    8 ListaCmd: Cmd ListaCmd
    9         | ε

   10 Cmd: CmdAtrib
   11    | CmdIf
   12    | CmdWhile

   13 CmdAtrib: VAR ATRIBUICAO Expr PTVIRG

   14 CmdIf: IF ABREPAR Expr FECHAPAR ABRECH ListaCmd FECHACH
   15      | IF ABREPAR Expr FECHAPAR ABRECH ListaCmd FECHACH ELSE ABRECH ListaCmd FECHACH

   16 CmdWhile: WHILE ABREPAR Expr FECHAPAR ABRECH ListaCmd FECHACH

   17 Expr: Expr MAIS Termo
   18     | Expr MENOS Termo
   19     | Termo

   20 Termo: Termo MULT Fator
   21      | Termo DIV Fator
   22      | Fator

   23 Fator: VAR
   24      | LONG
   25      | LONGLONG
   26      | ABREPAR Expr FECHAPAR


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    VAR (258) 5 13 23
    LONG (259) 24
    LONGLONG (260) 25
    RETURN (261)
    MAIS (262) 17
    MENOS (263) 18
    MULT (264) 20
    DIV (265) 21
    EQUALS (266)
    MENOR (267)
    MAIOR (268)
    ATRIBUICAO (269) 13
    ABREPAR (270) 14 15 16 26
    FECHAPAR (271) 14 15 16 26
    ABRECH (272) 14 15 16
    FECHACH (273) 14 15 16
    PTVIRG (274) 5 13
    IF (275) 14 15
    WHILE (276) 16
    ELSE (277) 15
    LONG_T (278) 6
    LONG_LONG_T (279) 7


Nonterminals, with rules where they appear

    $accept (25)
        on left: 0
    S (26)
        on left: 1
        on right: 0
    Prog (27)
        on left: 2
        on right: 1
    ListaDecl (28)
        on left: 3 4
        on right: 2 3
    Decl (29)
        on left: 5
        on right: 3
    Tipo (30)
        on left: 6 7
        on right: 5
    ListaCmd (31)
        on left: 8 9
        on right: 2 8 14 15 16
    Cmd (32)
        on left: 10 11 12
        on right: 8
    CmdAtrib (33)
        on left: 13
        on right: 10
    CmdIf (34)
        on left: 14 15
        on right: 11
    CmdWhile (35)
        on left: 16
        on right: 12
    Expr (36)
        on left: 17 18 19
        on right: 13 14 15 16 17 18 26
    Termo (37)
        on left: 20 21 22
        on right: 17 18 19 20 21
    Fator (38)
        on left: 23 24 25 26
        on right: 20 21 22


State 0

    0 $accept: • S $end

    LONG_T       shift, and go to state 1
    LONG_LONG_T  shift, and go to state 2

    $default  reduce using rule 4 (ListaDecl)

    S          go to state 3
    Prog       go to state 4
    ListaDecl  go to state 5
    Decl       go to state 6
    Tipo       go to state 7


State 1

    6 Tipo: LONG_T •

    $default  reduce using rule 6 (Tipo)


State 2

    7 Tipo: LONG_LONG_T •

    $default  reduce using rule 7 (Tipo)


State 3

    0 $accept: S • $end

    $end  shift, and go to state 8


State 4

    1 S: Prog •

    $default  reduce using rule 1 (S)


State 5

    2 Prog: ListaDecl • ListaCmd

    VAR    shift, and go to state 9
    IF     shift, and go to state 10
    WHILE  shift, and go to state 11

    $default  reduce using rule 9 (ListaCmd)

    ListaCmd  go to state 12
    Cmd       go to state 13
    CmdAtrib  go to state 14
    CmdIf     go to state 15
    CmdWhile  go to state 16


State 6

    3 ListaDecl: Decl • ListaDecl

    LONG_T       shift, and go to state 1
    LONG_LONG_T  shift, and go to state 2

    $default  reduce using rule 4 (ListaDecl)

    ListaDecl  go to state 17
    Decl       go to state 6
    Tipo       go to state 7


State 7

    5 Decl: Tipo • VAR PTVIRG

    VAR  shift, and go to state 18


State 8

    0 $accept: S $end •

    $default  accept


State 9

   13 CmdAtrib: VAR • ATRIBUICAO Expr PTVIRG

    ATRIBUICAO  shift, and go to state 19


State 10

   14 CmdIf: IF • ABREPAR Expr FECHAPAR ABRECH ListaCmd FECHACH
   15      | IF • ABREPAR Expr FECHAPAR ABRECH ListaCmd FECHACH ELSE ABRECH ListaCmd FECHACH

    ABREPAR  shift, and go to state 20


State 11

   16 CmdWhile: WHILE • ABREPAR Expr FECHAPAR ABRECH ListaCmd FECHACH

    ABREPAR  shift, and go to state 21


State 12

    2 Prog: ListaDecl ListaCmd •

    $default  reduce using rule 2 (Prog)


State 13

    8 ListaCmd: Cmd • ListaCmd

    VAR    shift, and go to state 9
    IF     shift, and go to state 10
    WHILE  shift, and go to state 11

    $default  reduce using rule 9 (ListaCmd)

    ListaCmd  go to state 22
    Cmd       go to state 13
    CmdAtrib  go to state 14
    CmdIf     go to state 15
    CmdWhile  go to state 16


State 14

   10 Cmd: CmdAtrib •

    $default  reduce using rule 10 (Cmd)


State 15

   11 Cmd: CmdIf •

    $default  reduce using rule 11 (Cmd)


State 16

   12 Cmd: CmdWhile •

    $default  reduce using rule 12 (Cmd)


State 17

    3 ListaDecl: Decl ListaDecl •

    $default  reduce using rule 3 (ListaDecl)


State 18

    5 Decl: Tipo VAR • PTVIRG

    PTVIRG  shift, and go to state 23


State 19

   13 CmdAtrib: VAR ATRIBUICAO • Expr PTVIRG

    VAR       shift, and go to state 24
    LONG      shift, and go to state 25
    LONGLONG  shift, and go to state 26
    ABREPAR   shift, and go to state 27

    Expr   go to state 28
    Termo  go to state 29
    Fator  go to state 30


State 20

   14 CmdIf: IF ABREPAR • Expr FECHAPAR ABRECH ListaCmd FECHACH
   15      | IF ABREPAR • Expr FECHAPAR ABRECH ListaCmd FECHACH ELSE ABRECH ListaCmd FECHACH

    VAR       shift, and go to state 24
    LONG      shift, and go to state 25
    LONGLONG  shift, and go to state 26
    ABREPAR   shift, and go to state 27

    Expr   go to state 31
    Termo  go to state 29
    Fator  go to state 30


State 21

   16 CmdWhile: WHILE ABREPAR • Expr FECHAPAR ABRECH ListaCmd FECHACH

    VAR       shift, and go to state 24
    LONG      shift, and go to state 25
    LONGLONG  shift, and go to state 26
    ABREPAR   shift, and go to state 27

    Expr   go to state 32
    Termo  go to state 29
    Fator  go to state 30


State 22

    8 ListaCmd: Cmd ListaCmd •

    $default  reduce using rule 8 (ListaCmd)


State 23

    5 Decl: Tipo VAR PTVIRG •

    $default  reduce using rule 5 (Decl)


State 24

   23 Fator: VAR •

    $default  reduce using rule 23 (Fator)


State 25

   24 Fator: LONG •

    $default  reduce using rule 24 (Fator)


State 26

   25 Fator: LONGLONG •

    $default  reduce using rule 25 (Fator)


State 27

   26 Fator: ABREPAR • Expr FECHAPAR

    VAR       shift, and go to state 24
    LONG      shift, and go to state 25
    LONGLONG  shift, and go to state 26
    ABREPAR   shift, and go to state 27

    Expr   go to state 33
    Termo  go to state 29
    Fator  go to state 30


State 28

   13 CmdAtrib: VAR ATRIBUICAO Expr • PTVIRG
   17 Expr: Expr • MAIS Termo
   18     | Expr • MENOS Termo

    MAIS    shift, and go to state 34
    MENOS   shift, and go to state 35
    PTVIRG  shift, and go to state 36


State 29

   19 Expr: Termo •
   20 Termo: Termo • MULT Fator
   21      | Termo • DIV Fator

    MULT  shift, and go to state 37
    DIV   shift, and go to state 38

    $default  reduce using rule 19 (Expr)


State 30

   22 Termo: Fator •

    $default  reduce using rule 22 (Termo)


State 31

   14 CmdIf: IF ABREPAR Expr • FECHAPAR ABRECH ListaCmd FECHACH
   15      | IF ABREPAR Expr • FECHAPAR ABRECH ListaCmd FECHACH ELSE ABRECH ListaCmd FECHACH
   17 Expr: Expr • MAIS Termo
   18     | Expr • MENOS Termo

    MAIS      shift, and go to state 34
    MENOS     shift, and go to state 35
    FECHAPAR  shift, and go to state 39


State 32

   16 CmdWhile: WHILE ABREPAR Expr • FECHAPAR ABRECH ListaCmd FECHACH
   17 Expr: Expr • MAIS Termo
   18     | Expr • MENOS Termo

    MAIS      shift, and go to state 34
    MENOS     shift, and go to state 35
    FECHAPAR  shift, and go to state 40


State 33

   17 Expr: Expr • MAIS Termo
   18     | Expr • MENOS Termo
   26 Fator: ABREPAR Expr • FECHAPAR

    MAIS      shift, and go to state 34
    MENOS     shift, and go to state 35
    FECHAPAR  shift, and go to state 41


State 34

   17 Expr: Expr MAIS • Termo

    VAR       shift, and go to state 24
    LONG      shift, and go to state 25
    LONGLONG  shift, and go to state 26
    ABREPAR   shift, and go to state 27

    Termo  go to state 42
    Fator  go to state 30


State 35

   18 Expr: Expr MENOS • Termo

    VAR       shift, and go to state 24
    LONG      shift, and go to state 25
    LONGLONG  shift, and go to state 26
    ABREPAR   shift, and go to state 27

    Termo  go to state 43
    Fator  go to state 30


State 36

   13 CmdAtrib: VAR ATRIBUICAO Expr PTVIRG •

    $default  reduce using rule 13 (CmdAtrib)


State 37

   20 Termo: Termo MULT • Fator

    VAR       shift, and go to state 24
    LONG      shift, and go to state 25
    LONGLONG  shift, and go to state 26
    ABREPAR   shift, and go to state 27

    Fator  go to state 44


State 38

   21 Termo: Termo DIV • Fator

    VAR       shift, and go to state 24
    LONG      shift, and go to state 25
    LONGLONG  shift, and go to state 26
    ABREPAR   shift, and go to state 27

    Fator  go to state 45


State 39

   14 CmdIf: IF ABREPAR Expr FECHAPAR • ABRECH ListaCmd FECHACH
   15      | IF ABREPAR Expr FECHAPAR • ABRECH ListaCmd FECHACH ELSE ABRECH ListaCmd FECHACH

    ABRECH  shift, and go to state 46


State 40

   16 CmdWhile: WHILE ABREPAR Expr FECHAPAR • ABRECH ListaCmd FECHACH

    ABRECH  shift, and go to state 47


State 41

   26 Fator: ABREPAR Expr FECHAPAR •

    $default  reduce using rule 26 (Fator)


State 42

   17 Expr: Expr MAIS Termo •
   20 Termo: Termo • MULT Fator
   21      | Termo • DIV Fator

    MULT  shift, and go to state 37
    DIV   shift, and go to state 38

    $default  reduce using rule 17 (Expr)


State 43

   18 Expr: Expr MENOS Termo •
   20 Termo: Termo • MULT Fator
   21      | Termo • DIV Fator

    MULT  shift, and go to state 37
    DIV   shift, and go to state 38

    $default  reduce using rule 18 (Expr)


State 44

   20 Termo: Termo MULT Fator •

    $default  reduce using rule 20 (Termo)


State 45

   21 Termo: Termo DIV Fator •

    $default  reduce using rule 21 (Termo)


State 46

   14 CmdIf: IF ABREPAR Expr FECHAPAR ABRECH • ListaCmd FECHACH
   15      | IF ABREPAR Expr FECHAPAR ABRECH • ListaCmd FECHACH ELSE ABRECH ListaCmd FECHACH

    VAR    shift, and go to state 9
    IF     shift, and go to state 10
    WHILE  shift, and go to state 11

    $default  reduce using rule 9 (ListaCmd)

    ListaCmd  go to state 48
    Cmd       go to state 13
    CmdAtrib  go to state 14
    CmdIf     go to state 15
    CmdWhile  go to state 16


State 47

   16 CmdWhile: WHILE ABREPAR Expr FECHAPAR ABRECH • ListaCmd FECHACH

    VAR    shift, and go to state 9
    IF     shift, and go to state 10
    WHILE  shift, and go to state 11

    $default  reduce using rule 9 (ListaCmd)

    ListaCmd  go to state 49
    Cmd       go to state 13
    CmdAtrib  go to state 14
    CmdIf     go to state 15
    CmdWhile  go to state 16


State 48

   14 CmdIf: IF ABREPAR Expr FECHAPAR ABRECH ListaCmd • FECHACH
   15      | IF ABREPAR Expr FECHAPAR ABRECH ListaCmd • FECHACH ELSE ABRECH ListaCmd FECHACH

    FECHACH  shift, and go to state 50


State 49

   16 CmdWhile: WHILE ABREPAR Expr FECHAPAR ABRECH ListaCmd • FECHACH

    FECHACH  shift, and go to state 51


State 50

   14 CmdIf: IF ABREPAR Expr FECHAPAR ABRECH ListaCmd FECHACH •
   15      | IF ABREPAR Expr FECHAPAR ABRECH ListaCmd FECHACH • ELSE ABRECH ListaCmd FECHACH

    ELSE  shift, and go to state 52

    $default  reduce using rule 14 (CmdIf)


State 51

   16 CmdWhile: WHILE ABREPAR Expr FECHAPAR ABRECH ListaCmd FECHACH •

    $default  reduce using rule 16 (CmdWhile)


State 52

   15 CmdIf: IF ABREPAR Expr FECHAPAR ABRECH ListaCmd FECHACH ELSE • ABRECH ListaCmd FECHACH

    ABRECH  shift, and go to state 53


State 53

   15 CmdIf: IF ABREPAR Expr FECHAPAR ABRECH ListaCmd FECHACH ELSE ABRECH • ListaCmd FECHACH

    VAR    shift, and go to state 9
    IF     shift, and go to state 10
    WHILE  shift, and go to state 11

    $default  reduce using rule 9 (ListaCmd)

    ListaCmd  go to state 54
    Cmd       go to state 13
    CmdAtrib  go to state 14
    CmdIf     go to state 15
    CmdWhile  go to state 16


State 54

   15 CmdIf: IF ABREPAR Expr FECHAPAR ABRECH ListaCmd FECHACH ELSE ABRECH ListaCmd • FECHACH

    FECHACH  shift, and go to state 55


State 55

   15 CmdIf: IF ABREPAR Expr FECHAPAR ABRECH ListaCmd FECHACH ELSE ABRECH ListaCmd FECHACH •

    $default  reduce using rule 15 (CmdIf)
